<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EaseIn</string>
    <string name="action_settings">Opciones</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="mis_datos">Mis datos</string>
    <string name="aceptar">Aceptar</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Registrarse</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">True friendship everywhere you go!</string>
    <string name="title_activity_settings">Opciones</string>
    <string name="search_distance">Selecciona el radio máximo de búsqueda de Espacios Accesibles</string>
    <string name="logout_full">Salir de EaseIn</string>
    <string name="post">Nuevo punto</string>
    <string name="prompt_post">Marcar punto</string>
    <string name="post_out_of_range_tit">Muy lejos (Cambia la distancia en Menú "Opciones")</string>
    <string name="post_out_of_range_sub">Cambia el radio de búsqueda en Menú "Opciones"</string>
    <string name="progress_post">Publicando&#8230;</string>
    <string name="settings_distance_format">%d pies</string>
    <string name="activity_post_title">Publicar un espacio accesible</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="title_activity_log">Iniciar sesión</string>
    <string name="title_activity_signup">Registrarse</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_again">Repetir contraseña</string>
    <string name="error_intro">"Por favor "</string>
    <string name="error_blank_username">escriba un usuario</string>
    <string name="error_blank_password">escriba una contraseña</string>
    <string name="error_mismatched_passwords">escriba la misma contraseña de nuevo</string>
    <string name="error_join">" y "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Iniciando sesión&#8230;</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_google_play_services">Servicios de Google Play</string>
    <string name="title_activity_main">EaseIn</string>
    <string name="title_activity_post">Publicar</string>
    <string name="progress_signup">Registrando datos&#8230;</string>
    <string name="espacio_acensor">Ascensor</string>
    <string name="espacio_banio">Baño</string>
    <string name="espacio_parqueadero">Parqueadero</string>
    <string name="espacio_rampa">Rampa</string>
    <string name="espacio_acensor_desc">Ascensor con capacidad para silla de ruedas</string>
    <string name="espacio_banio_desc">Baño para persona en condición de discapacidad</string>
    <string name="espacio_parqueadero_desc">Parqueadero accesible y amplio</string>
    <string name="espacio_rampa_desc">Puente o camino con acceso para silla de ruedas</string>
    <string name="titulo_info">Un nuevo Espacio Accesible será agregado al mapa de EaseIn en el lugar donde te encuentras ahora mismo</string>
    <string name="titulo_info_add">Selecciona el tipo de Espacio Accesible</string>
    <string name="cancelar">Cancelar</string>

</resources>